# cracks-yolo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .yamllint  README.md  README.zh-CN.md  _remote_start.py  _run_s4.py  _run_s5.py  experiments.yaml  experiments_smoke.yaml  mypy.ini  pyproject.toml  ruff.toml  test_metrics.csv  test_metrics.xlsx  yolov5s-sac-tr.yml
.claude/: debug.txt  latest
cracks_yolo/: __init__.py  __main__.py  cli.py  exceptions.py
cracks_yolo/analysis/: __init__.py  aggregate.py  dataset.py  model.py
cracks_yolo/annotator/: __init__.py  canvas.py  controller.py  dialogs.py  panels.py  workspace.py
cracks_yolo/cli/: __init__.py  annotator.py  args.py
cracks_yolo/dataset/: __init__.py  augment.py  coco.py  convert.py  exporter.py  load.py  loader.py  torchadapter.py  transforms.py  types.py  yolo.py
cracks_yolo/helpers/: inject.py
cracks_yolo/logging/: __init__.py  configure.py  schema.py
cracks_yolo/losses/: __init__.py  _common.py  yolov10.py  yolov5.py  yolov7.py  yolov8.py
cracks_yolo/metrics/: __init__.py  calculator.py  confusion.py  curves.py  protocol.py  schemas.py  statistical.py
cracks_yolo/nn/: conv.py
cracks_yolo/ops/: __init__.py  activation.py  conv.py  csp.py  detect_heads.py  implicit.py  sac.py  sac_v2.py  transformer.py  yolov9.py
cracks_yolo/pipeline/: __init__.py  _helpers.py  _utils.py  compare.py  compose.py  crossval.py  protocol.py  test.py  train.py
cracks_yolo/viz/: __init__.py  confusion.py  curves.py  dataset.py  heatmap.py  plotting.py
cracks_yolo/weights/: __init__.py  loader.py  registry.py  remappers.py
cracks_yolo/zoo/: __init__.py  base.py  static_yolo.py  torchvision_detectors.py  ultralytics_detectors.py  ultralytics_sac.py  yolov10.py  yolov5.py  yolov7.py  yolov8.py  yolov9.py
docs/: architecture.md  architecture.zh-CN.md  cross_validation.md  cross_validation.zh-CN.md  cuda_setup.md  cuda_setup.zh-CN.md  dataset.md  dataset.zh-CN.md  dataset_analysis.md  dataset_analysis.zh-CN.md  development.md  development.zh-CN.md  heatmap.md  heatmap.zh-CN.md  logging.md  logging.zh-CN.md  metrics.md  metrics.zh-CN.md  models.md  models.zh-CN.md  ops.md  ops.zh-CN.md  pipeline.md  pipeline.zh-CN.md  pretrained.md  pretrained.zh-CN.md  scheduler.md  scheduler.zh-CN.md  scripts.md  scripts.zh-CN.md  usage.md  usage.zh-CN.md  visualization.md  visualization.zh-CN.md
examples/yolov10_fcos_retinanet_sweep/: README.md  README.zh-CN.md  sweep.yaml
examples/yolov5s_sactr_cv/: README.md  README.zh-CN.md
examples/yolov8_direct/: README.md  README.zh-CN.md
experiments/: README.md  README.zh-CN.md  all_models_compose.yaml  all_models_cv5.yaml  all_models_direct.yaml  compose_all.yaml  group_1.yaml  group_2.yaml  group_3.yaml  group_4.yaml  group_yolov5s_ablation.yaml  train.py  yolov5s-sac-tr.yaml
experiments/compose_4/: group_1.yaml  group_2.yaml  group_3.yaml  group_4.yaml  group_deferred.yaml
experiments/models/: faster_rcnn_r50.yaml  fcos_r50.yaml  mask_rcnn_r50.yaml  retinanet_r50.yaml  rtdetr_r50.yaml  rtdetr_r50_sac.yaml  ssd300_vgg16.yaml  ssdlite320_mobilenetv3.yaml  yolo11n.yaml  yolo11s.yaml  yolo12n.yaml  yolo12s.yaml  yolo26n.yaml  yolo26s.yaml  yolov10b.yaml  yolov10l.yaml  yolov10m.yaml  yolov10n.yaml  yolov10s.yaml  yolov10s_sac.yaml  yolov10x.yaml  yolov3.yaml  yolov5l.yaml  yolov5m.yaml  yolov5n.yaml  yolov5s.yaml  yolov5s_baseline.yaml  yolov5s_sac.yaml  yolov5s_sac_tuned.yaml  yolov5s_sactr.yaml  yolov5s_sactr_tuned.yaml  yolov5s_sactr_v2.yaml  yolov5s_sactr_v3.yaml  yolov5s_sactr_v4.yaml  yolov5s_sactr_v5.yaml  yolov5s_tr.yaml  yolov5x.yaml  yolov6n.yaml  yolov6n_sac.yaml  yolov8l.yaml  (+12 more)
notebooks/: main.ipynb
scripts/: __init__.py  _console.py  analyze_dataset.py  analyze_model.py  cli.py  compare_models.py  convert_dataset.py  generate_experiment_configs.py  heatmap.py  mergeall.bat  quickstart_server.sh  run_v5.sh  schedule_experiments.py  server_status.sh  test.py  train.py  train_ultralytics.py  train_v5_official.py
tests/: conftest.py
(+77 files in other folders)
