[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "cracks-yolo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChen SHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.11,<=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "halo>=0.0.31,<0.0.32",
  "matplotlib>=3.10.7,<4",
  "numpy==2.2.6",
  "openpyxl>=3.1.5,<4",
  "pandas>=2.3.3,<3",
  # "torch>=1.8.0",  # fuck poetry
  # "torchvision>=0.9.0",
  "pycocotools>=2.0.10,<3",
  "pydantic>=2.12,<3",
  "pyyaml>=6.0.3,<7",
  "seaborn>=0.13.2,<0.14",
]

optional-dependencies.dev = [ "pre-commit>=4.3,<5", "ruff>=0.14.2,<0.15" ]
optional-dependencies.test = [
  "mypy>=1.18.2,<2",
  "pylint>=3.3.9,<4",
  "pytest>=8.4.2,<9",
  "pytest-cov>=7,<8",
  "pytest-mock>=3.15.1,<4",
]
