[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "cracks-yolo"
version = "0.1.0"
description = "Self-contained PyTorch YOLO model zoo for cracks detection, with SAC and TR enhancements."
readme = "README.md"
authors = [
  { name = "BoChen SHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.11,<=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "halo>=0.0.31,<0.0.32",
  "loguru>=0.7,<0.8",
  "matplotlib>=3.10.7,<4",
  "opencv-python>=4.10,<5",
  "openpyxl>=3.1.5,<4",
  "pandas>=2.3.3,<3",
  "pycocotools>=2.0.10,<3",
  "pydantic>=2.12,<3",
  "pyyaml>=6.0.3,<7",
  "requests>=2.32,<3",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
  "seaborn>=0.13.2,<0.14",
  "statsmodels>=0.14,<0.15",
  "tabulate>=0.9,<0.10",
  "torch>=2.2,<2.6",
  "torchvision>=0.17,<0.21",
  "tqdm>=4.66,<5",
]

[dependency-groups]
# Force torch/torchvision to use the CUDA 11.8 wheel index. The constraint
# above (torch<2.6, torchvision<0.21) keeps us on a build that ships a cu118
# wheel. To switch back to CPU-only, comment this block out and re-run `uv sync`.
dev = [
  "fvcore>=0.1.5,<0.2",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3.5,<4",
  "ruff>=0.15.13",
  "thop>=0.1,<0.2",
]

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "cracks_yolo*" ]

[tool.setuptools.exclude-package-data]
"*" = [
  "**/.ruff_cache/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/*.egg-info/**",
  "**/build/**",
  "**/dist/**",
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-ra --strict-markers --strict-config"
pythonpath = [ "." ]
filterwarnings = [
  "ignore::pytest.PytestCollectionWarning",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
